[project]
name = "scansvc"
version = "0.1.0"
description = "Smart contract vulnerability scanning orchestrator"
authors = [{name = "Auto"}]
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings",
    "celery[redis]",
    "redis",
    "typer",
    "requests",
    "alembic",
    "python-dotenv",
    "structlog",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"